--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "minecraft-api": "^0.0.3",
     "mongodb": "^4.2.2",
     "mongoose": "^6.1.3",
+    "nanoid": "^3.1.30",
     "next": "latest",
     "next-auth": "^4.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hotkeys-hook": "^3.4.4",
     "react-spinners": "^0.11.0",
     "swr": "^1.1.1"
   },
