--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "docker-dev-build": "docker build -t registry.gitlab.com/issa4700/aker-dashboard:dev-latest .",
+    "docker-dev-push": "docker push registry.gitlab.com/issa4700/aker-dashboard:dev-latest",
+    "docker-prod-build": "docker build -t registry.gitlab.com/issa4700/aker-dashboard:latest .",
+    "docker-prod-push": "docker push registry.gitlab.com/issa4700/aker-dashboard:latest"
   },
   "dependencies": {
     "@headlessui/react": "^1.4.2",
