--- a/package.json
+++ b/package.json
@@ -13,17 +13,19 @@
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
     "@next-auth/mongodb-adapter": "^1.0.1",
+    "@next-auth/sequelize-adapter": "^1.0.2",
     "ioredis": "^4.28.2",
+    "mariadb": "^2.5.5",
     "minecraft-api": "^0.0.3",
-    "mongodb": "^4.2.2",
-    "mongoose": "^6.1.3",
+    "mysql2": "^2.3.3",
     "nanoid": "^3.1.30",
     "next": "latest",
-    "next-auth": "^4.0.5",
+    "next-auth": "^4.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hotkeys-hook": "^3.4.4",
     "react-spinners": "^0.11.0",
+    "sequelize": "^6.14.1",
     "swr": "^1.1.1"
   },
   "devDependencies": {
