--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@next-auth/mongodb-adapter": "^1.0.1",
     "@next-auth/sequelize-adapter": "^1.0.2",
     "ioredis": "^4.28.2",
+    "lodash": "^4.17.21",
     "mariadb": "^2.5.5",
     "minecraft-api": "^0.0.3",
     "mysql2": "^2.3.3",
